# framer

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml  ips.md
03/32e4a9d7e4/: metadata.json
05/2737c70467/: metadata.json
86/a85303998c/: metadata.json
ce/3362dc6744/: metadata.json
config/: .env.common  .env.dev  .env.prod  .env.qa  README.md  ai.yaml
docs/plans/: 2026-01-29-framer-ui-prototype-design.md  2026-01-30-framer-production-design.md  2026-01-30-tdd-implementation-plan.md  2026-02-04-users-teams-admin.md  2026-02-13-admin-portal-design.md  2026-02-13-admin-portal-plan.md  CLAUDE.md
e1/bf881b4f8b/: metadata.json
pocketbase/pb_migrations/: 1707062400_create_teams.js  1707062401_create_team_members.js  (+5 more)
prototype/: .env.local.example  findings.md  package-lock.json  package.json  playwright.config.ts  progress.md  task_plan.md
scripts/: docker.sh
src/backend/: pyproject.toml  requirements.txt
src/backend/app/: main.py
src/backend/app/agents/: config.py  conversation.py  evaluator.py  generator.py  refiner.py
src/backend/app/api/: admin.py  ai.py  conversations.py  frames.py  knowledge.py  templates.py  users.py
src/backend/app/auth/: pocketbase.py
src/backend/app/models/: conversation.py  frame.py  knowledge.py  template.py
src/backend/app/services/: CLAUDE.md  conversation_service.py  frame_service.py  git_service.py  index_service.py  knowledge_service.py  migration_service.py  template_service.py  vector_service.py
(+199 files in other folders)
